# ComfyUI_StoryDiffusion

./: README-CN.md  README.md  Storydiffusion_node.py  __init__.py  config.json  example.json  model_loader_utils.py  pyproject.toml  requirements.txt  storydiffusion_workflow.json  storydiffusion_workflow_0421.json
Bagel/: EVAL.md  README.md  TRAIN.md  app.py  inference.ipynb  inferencer.py  requirements.txt
DreamO/: README.md  app.py  pyproject.toml  requirements.txt
InstantCharacter/: License.txt  Notice.txt  README.md  app.py  infer_demo.py  pipeline.py  pipeline_wrapper.py
OmniConsistency/: README.md  app.py  infer.py  requirements.txt
PuLID/: app_flux.py
RealCustom/: README.md  utils.py
SD35_Large_IPAdapter/: attention_processor.py  infer_flux_ipa_siglip.py  pipeline_stable_diffusion_3_ipa.py  transformer_flux.py
StoryMaker/: infer.py  pipeline_sdxl_storymaker.py  pipeline_sdxl_storymaker_wrapper.py
UNO/: README.md  app.py  inference.py  requirements.txt  train.py
config/: config.json  lora.yaml  models.yaml
consistory/: attention_processor.py  consistory_CLI.py  consistory_cache.py  consistory_pipeline.py  consistory_pipeline_wapper.py  consistory_run.py  consistory_unet_sdxl.py  environment.yml
example_workflows/: storydiffusion_workflow.json  storydiffusion_workflow0815.json  storydiffusion_workflow0824.json  storydiffusion_workflow_0604.json  storydiffusion_workflow_1.json
examples/: 1imgtoimglora.json  2img2imglora.json  2rolein1img.json  example.json  img2img.json  img2img_lora_controlnet_2rolein1img.json  kolors.json  new.json  (+18 more)
(+195 files in other folders)
