[project]
name = "comfyui_storydiffusion"
description = "you can using sotry-diffusion in comfyui"
version = "1.1.0"
license = { file = "LICENSE" }
dependencies = ["diffusers", "spaces", "peft"]

[project.urls]
Repository = "https://github.com/smthemex/ComfyUI_StoryDiffusion"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "smthemx"
DisplayName = "ComfyUI_StoryDiffusion"
Icon = ""
