[project]
name = "comfyui_storydiffusion"
description = "you can using sotry-diffusion in comfyui"
version = "1.3.0"
license = { file = "LICENSE" }
dependencies = ["diffusers", "spaces", "peft"]

[project.urls]
Repository = "https://github.com/smthemex/ComfyUI_StoryDiffusion"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "smthemex"
DisplayName = "ComfyUI_StoryDiffusion"
Icon = ""
